# azure-search-openai-demo

./: pyproject.toml
app/backend/: requirements.txt
infra/: main.bicep  main.parameters.json
