[tool.ruff]
target-version = "py38"
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E701"] # line too long, multiple statements on one line
src = ["app/backend"]

[tool.black]
line-length = 300

[tool.pytest.ini_options]
addopts = "-ra --cov"
pythonpath = ["app/backend"]

[tool.coverage.paths]
source = ["scripts", "app"]

[tool.coverage.report]
show_missing = true

[tool.poetry]
name = "azure-search-openai-demo"
version = "0.1.0"
description = ""
authors = ["sayuri-gotou <s-gotou@core.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
